objects/SGR_Trigger_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Controls SGR Triggers</description>
    <fields>
        <fullName>Trigger_Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking indicates that Trigger will execute</description>
        <label>Trigger Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trigger_Name__c</fullName>
        <description>Name of the Trigger Class</description>
        <label>Trigger Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger_SubMethod__c</fullName>
        <description>Method inside the Trigger to be controlled.</description>
        <label>Trigger SubMethod</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>SGR Trigger Settings</label>
    <listViews>
        <fullName>Values_and_Details</fullName>
        <columns>NAME</columns>
        <columns>Trigger_Name__c</columns>
        <columns>Trigger_SubMethod__c</columns>
        <columns>Trigger_Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>Values and Details</label>
    </listViews>
</CustomObject>